--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
     <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
     <script src="https://unpkg.com/aframe-text-geometry-component@0.5.1/dist/aframe-text-geometry-component.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+    <script src="https://unpkg.com/aframe-firebase-component@^4.0.0/dist/aframe-firebase-component.min.js"></script>
     <script src="home.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <a-scene id="scene">
+    <a-scene id="scene" firebase= "apiKey: AIzaSyCVulCmJpuvM5hJEzPWOlxHHoYm1RYpPnM,
+        authDomain: test-mplay.firebaseapp.com,
+        projectId: test-mplay,
+        storageBucket: test-mplay.appspot.com,
+        messagingSenderId: 846616741929,
+        appId: 1:846616741929:web:e81b2fe83a26db1a47b438,
+        measurementId: G-D9ZC2DXLDH">
         <a-assets> 
             <img id="pink" src="https://img.gs/bbdkhfbzkk/stretch/http://i.imgur.com/1hyyIUi.jpg" crossorigin="anonymous" />
             <img src="https://img.gs/bbdkhfbzkk/stretch/https://i.imgur.com/25P1geh.png" id="grid" crossorigin="anonymous">
@@ -83,18 +87,5 @@
         </a-entity>
 
     </a-scene>
-
-    <script>
-        const firebaseConfig = {
-          apiKey: "AIzaSyCVulCmJpuvM5hJEzPWOlxHHoYm1RYpPnM",
-          authDomain: "test-mplay.firebaseapp.com",
-          projectId: "test-mplay",
-          storageBucket: "test-mplay.appspot.com",
-          messagingSenderId: "846616741929",
-          appId: "1:846616741929:web:e81b2fe83a26db1a47b438",
-          measurementId: "G-D9ZC2DXLDH"
-        };
-        firebase.initializeApp(firebaseConfig);
-    </script>
 </body>
 </html>
