--- a/index.html
+++ b/index.html
@@ -8,20 +8,11 @@
     <script type="text/javascript" src="main.js"></script>
     <script src="https://unpkg.com/aframe-text-geometry-component@0.5.1/dist/aframe-text-geometry-component.min.js"></script>
     <script src="https://unpkg.com/aframe-firebase-component@^4.0.0/dist/aframe-firebase-component.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <script src="home.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <a-scene id="scene" firebase= "apiKey: AIzaSyCVulCmJpuvM5hJEzPWOlxHHoYm1RYpPnM,
-        authDomain: test-mplay.firebaseapp.com,
-        projectId: test-mplay,
-        storageBucket: test-mplay.appspot.com,
-        messagingSenderId: 846616741929,
-        appId: 1:846616741929:web:e81b2fe83a26db1a47b438,
-        measurementId: G-D9ZC2DXLDH">
+    <a-scene id="scene">
         <a-assets> 
             <img id="pink" src="https://img.gs/bbdkhfbzkk/stretch/http://i.imgur.com/1hyyIUi.jpg" crossorigin="anonymous" />
             <img src="https://img.gs/bbdkhfbzkk/stretch/https://i.imgur.com/25P1geh.png" id="grid" crossorigin="anonymous">
@@ -90,5 +81,21 @@
         </a-entity>
 
     </a-scene>
+
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+    <script>
+        const firebaseConfig = {
+          apiKey: "AIzaSyCVulCmJpuvM5hJEzPWOlxHHoYm1RYpPnM",
+          authDomain: "test-mplay.firebaseapp.com",
+          projectId: "test-mplay",
+          storageBucket: "test-mplay.appspot.com",
+          messagingSenderId: "846616741929",
+          appId: "1:846616741929:web:e81b2fe83a26db1a47b438",
+          measurementId: "G-D9ZC2DXLDH"
+        };
+        firebase.initializeApp(firebaseConfig);
+    </script>
 </body>
 </html>
