--- a/index.html
+++ b/index.html
@@ -84,7 +84,15 @@
         </a-entity>
 
     </a-scene>
-    <script>
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-analytics.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+      
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
         const firebaseConfig = {
           apiKey: "AIzaSyCVulCmJpuvM5hJEzPWOlxHHoYm1RYpPnM",
           authDomain: "test-mplay.firebaseapp.com",
@@ -94,7 +102,10 @@
           appId: "1:846616741929:web:e81b2fe83a26db1a47b438",
           measurementId: "G-D9ZC2DXLDH"
         };
-        firebase.initializeApp(firebaseConfig);
-    </script>
+      
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+      </script>
 </body>
 </html>
